# gui-vizkit_3d_plugins

./: CMakeLists.txt  README  manifest.xml
scripts/: gps_test.rb  test.rb
viz/: CMakeLists.txt  openstreetmap.earth  osgEarth-viz.pc.in  osgEarth.cpp  osgEarth.hpp  vizkit_plugin.rb
